fix: frontend build errors (css paths, config.js import)